--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
     <div class="container">
         <!-- Profile photo -->
         <div class="profile-photo">
-            <img src="{{ url_for('static', filename='1.png') }}" alt="Snigdha Photo">
+            <img src="{{ url_for('static', filename='1.jpg') }}" alt="Snigdha Photo">
 
         </div>
 
