--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,9 @@
         }
 
         .profile-photo img {
-            width: 100%;
+            width: 180px;
+            height: 180px;
+            object-fit: cover;
             border-radius: 50%;
             border: 3px solid #5599FF;
             box-shadow: 0 4px 15px rgba(85, 153, 255, 0.5);
